<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Symptom Checker</string>

    <!-- API tester resources -->
    <string name="api_test_desc">This is a utility to test the various ALICE API endpoints, and decision trees and workflows.</string>
    <string name="api_test_logger">Logging API</string>
    <string name="api_test_logger_desc">Test the various logging API calls</string>
    <string name="api_test_logger_register">Register</string>
    <string name="api_test_logger_location">Location</string>
    <string name="api_test_logger_callDoctor">Call Doctor</string>
    <string name="api_test_logger_callDoctorAccept">Accept</string>
    <string name="api_test_logger_callDoctorReject">Reject</string>
    <string name="api_test_diagnosis">Diagnosis API</string>
    <string name="api_test_diagnosis_desc">Test the various diagnosis API calls</string>
    <string name="diagnosis_dialog_title">Virtual Nurse</string>
    <string name="diagnosis_dialog_text">Asking Alice</string>
    <string name="alert_dialog_title">Virtual Nurse</string>
    <string name="right_triangle">Right Chat Bubble Triangle</string>
    <string name="left_triangle">Left Chat Bubble Triangle</string>
    <string name="close_chat">Chat Close Button</string>
    <string name="call_doctor_text">This service will connect you to a real, Board certified, doctor and will cost $40 so please have a credit card ready.  Shall we proceed?</string>
    <string name="call_doctor_unavailable">I\'m sorry, but this service is not yet available in your region</string>
    <string name="call_doctor_number">800-308-3112</string>
    <string name="call_doctor_ok">Yes</string>
    <string name="call_doctor_cancel">No</string>
    
    <string name="open_map">Click to find ER</string>
    <string name="unknown_response_phrase">Unclear response, please try again.</string>
    <string name="unknown_response_alert">Response could not be detected, please try again or try using touch</string>
    <string name="partner_medical">Medical content provider:</string>
    <string name="partner_tech">Technology partners:</string>
    <string name="partner_business">Advisory partners:</string>
    <string name="partner_money">Monetization partners:</string>
    <string name="share_btn">Tell Friends about App</string><string name="share_subject">The Virtual Nurse - Do you need to see the Doctor?</string>
    <string name="share_body">Helping you answer the question \'Do I need to see the doctor?\' http://bit.ly/Wz4PiP</string>
    <string name="info_about">About Virtual Nurse</string>
    <string name="info_howto">How to Use this App</string>
    <string name="info_partners">Partners</string>
    <string name="info_TCs">Terms of Use</string>
    <string name="info_privacy">Privacy Policy</string>
    <string name="info_share">Share with Friends</string>
    <string name="info_rate">Rate this app!</string>
    <string name="info_contact">Contact the developer</string>
    <string name="info_feedback">Send us feedback</string>
    <string name="menu_body">Please select the body area where you are having problems</string>
    <string name="menu_guide">I\'ve identified a number of possible guides, please select the most relevant one below</string>
    <string name="menu_demographic">Please select your demographic from the list below</string>
    <string name="menu_category">Please select the category which best describes your problem</string>
    
    
</resources>