<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	<ScrollView
            android:id="@+id/buttons_scroll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollbarAlwaysDrawVerticalTrack="true" >
            
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/tri_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/left_triangle"
                android:src="@drawable/tri_left" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/options_text_response"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bubble_left"
                    android:orientation="vertical" >

                <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="10dp"
	                android:layout_marginLeft="10dp"
	                android:layout_marginRight="10dp"
	                android:layout_marginTop="10dp"
	                android:textStyle="bold"
	                android:paddingBottom="10dp"
	                android:paddingLeft="10dp"
	                android:paddingRight="10dp"
	                android:paddingTop="10dp"
	                style="@style/ChatFontSize"
	                android:text="@string/partner_medical"
	                android:textColor="@android:color/black" />
                
                <ImageView
			        android:id="@+id/harvard_logo"
			        android:layout_width="fill_parent"
			        android:layout_height="60dp"
			        android:layout_centerHorizontal="true"
			        android:src="@drawable/harvard_logo" />
                
                <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="10dp"
	                android:layout_marginLeft="10dp"
	                android:layout_marginRight="10dp"
	                android:layout_marginTop="10dp"
	                android:textStyle="bold"
	                android:paddingLeft="10dp"
	                android:paddingRight="10dp"
	                android:paddingTop="10dp"
	                style="@style/ChatFontSize"
	                android:text="@string/partner_tech"
	                android:textColor="@android:color/black" />
                
                <ImageView
			        android:id="@+id/nuance_light"
			        android:layout_width="fill_parent"
			        android:layout_height="70dp"
			        android:layout_alignParentBottom="true"
			        android:layout_centerHorizontal="true"
			        android:src="@drawable/nuance_light" />
                
                <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="10dp"
	                android:layout_marginLeft="10dp"
	                android:layout_marginRight="10dp"
	                android:layout_marginTop="10dp"
	                android:textStyle="bold"
	                android:paddingBottom="10dp"
	                android:paddingLeft="10dp"
	                android:paddingRight="10dp"
	                style="@style/ChatFontSize"
	                android:text="@string/partner_business"
	                android:textColor="@android:color/black" />
                
                <ImageView
			        android:id="@+id/su_logo"
			        android:layout_width="fill_parent"
			        android:layout_height="50dp"
			        android:layout_alignParentBottom="true"
			        android:layout_centerHorizontal="true"
			        android:src="@drawable/su_logo" />
                
                <ImageView
			        android:id="@+id/rockhealth_logo"
			        android:layout_width="fill_parent"
			        android:layout_height="60dp"
			        android:paddingBottom="10dp"
	                android:paddingTop="10dp"
			        android:layout_alignParentBottom="true"
			        android:layout_centerHorizontal="true"
			        android:src="@drawable/rockhealth_logo" />
                
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>
        
    </LinearLayout>
            
                </LinearLayout>
        </ScrollView>


</LinearLayout>